<resources>
    <string name="app_name">OPMeals</string>
    <string name="tagline">Have the meal, Have the feel!</string>
    <string name="dev_info">Made in India with ❤️</string>
    <string name="login_txt">Login to your account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_on_login_page">Don\'t Have an Account ?<font color="#FF27C5C7"> <u>Sign Up Now!</u>.</font>.</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_login">Already have an Account ? <font color="#FF27C5C7"> <u>Login</u>.</font></string>
    <string name="sign_up">Sign Up here</string>
    <string name="location_info">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized offers, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>