<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/opmeals_logo"
            android:layout_width="412dp"
            android:layout_height="135dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/opmeals_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/tagline"
            android:textColor="@color/op_blue"
            android:textSize="18sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opmeals_logo" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/green"
            android:textSize="22sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="@+id/tagline"
            app:layout_constraintStart_toStartOf="@+id/tagline"
            app:layout_constraintTop_toBottomOf="@+id/tagline" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittextbckgrund"
            android:drawableLeft="@drawable/outline_person_24"
            android:drawablePadding="5dp"
            android:elevation="5dp"
            android:hint="@string/name"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup" />


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="48dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edittextbckgrund"
            android:drawableLeft="@drawable/outline_email_24"
            android:drawablePadding="5dp"
            android:elevation="5dp"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <EditText
            android:id="@+id/editTextPassword"
            android:paddingLeft="10dp"
            android:background="@drawable/edittextbckgrund"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:drawableLeft="@drawable/outline_lock_24"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:text="Forgot Password ?"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAllCaps="false"
            android:background="@drawable/greenbutton"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="OR"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_btn"
            app:layout_constraintStart_toStartOf="@+id/sign_up_btn"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Sign Up With"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facebook_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@drawable/whitebutton"
            android:drawableLeft="@drawable/facebook_logo"
            android:drawablePadding="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="5dp"
            android:text="Facebook"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/google_login_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.055" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:background="@drawable/whitebutton"
            android:drawableLeft="@drawable/google_logo"
            android:drawablePadding="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="Google"
            android:layout_marginTop="5dp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/facebook_login_btn"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.055" />

        <TextView
            android:id="@+id/login_on_register_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/google_login_btn"
            app:layout_constraintStart_toStartOf="@+id/facebook_login_btn"
            app:layout_constraintTop_toBottomOf="@+id/facebook_login_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>